--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Power Cell Tracker</title>
+    <title>untitled-app</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
     </style>
